# rlp

./: .gitignore  AGENT_MISTAKES.md  Architecture.md  CHECKPOINT.md  CLAUDE.md  CMakeLists.txt  LICENSE.txt  README.md  SEPOLIA_TEST_PARAMS.md  SPRINT_PLAN.md  build.bat  test_eth_watch.sh  valgrind.supp
.claude/: settings.local.json
.github/: *.instructions.md
.github/workflows/: benchmarks.yml  cmake-multi-platform.yml  fuzz.yml  sanitizers.yml  valgrind.yml
AgentDocs/: AGENT_MISTAKES.md  Architecture.md  BOOTNODES_CONFIGURATION.md  CHECKPOINT.md  CLAUDE.md  COMMANDS_REFERENCE.md  PUBLIC_NODES_FOR_TESTING.md  QUICK_TEST_GUIDE.md  SEPOLIA_TEST_PARAMS.md  SPRINT_PLAN.md  WHY_NO_MESSAGES.md
cmake/: CommonBuildParameters.cmake  CompilationFlags.cmake  Sanitizers.cmake  Valgrind.cmake  config.cmake.in  functions.cmake
docs/: P2P_NETWORK_TESTING.md
docs/rlpx/: README.md
examples/: .env.example  CMakeLists.txt  README.md  chain_config.hpp  chains.json  eth_watch.cpp  send_test_transactions.sh  test_eth_watch.sh
examples/config/: sepolia.json
examples/discovery/: CMakeLists.txt  test_discovery.cpp  test_discv5_connect.cpp  test_enr_survey.cpp
examples/discv5_crawl/: CMakeLists.txt  discv5_crawl.cpp
examples/eth_watch/: CMakeLists.txt  eth_watch.cpp
include/: common.hpp  discovery.hpp  intx.hpp  rlp_decoder.hpp  rlp_encoder.hpp
include/PeerDiscovery/: Discv4Packet.hpp  Discv4Ping.hpp  Discv4Pong.hpp  discovery.hpp  packet_factory.hpp
include/base/: logger.hpp
include/discovery/: discovered_peer.hpp
include/discv4/: bootnodes.hpp  bootnodes_test.hpp  dial_history.hpp  dial_scheduler.hpp  discovery.hpp  discv4_client.hpp  discv4_constants.hpp  discv4_enr_request.hpp  discv4_enr_response.hpp  discv4_error.hpp  discv4_packet.hpp  discv4_ping.hpp  discv4_pong.hpp  packet_factory.hpp
include/discv5/: discv5_bootnodes.hpp  discv5_client.hpp  discv5_constants.hpp  discv5_crawler.hpp  discv5_enr.hpp  discv5_error.hpp  discv5_types.hpp
include/eth/: abi_decoder.hpp  chain_tracker.hpp  eth_constants.hpp  eth_types.hpp  eth_watch_cli.hpp  eth_watch_service.hpp  event_filter.hpp  messages.hpp  objects.hpp
include/rlp/: common.hpp  constants.hpp  endian.hpp  errors.hpp  result.hpp  rlp_decoder.hpp  rlp_encoder.hpp  rlp_ethereum.hpp  rlp_streaming.hpp  traits.hpp  types.hpp
include/rlp/PeerDiscovery/: Discv4Packet.hpp  Discv4Ping.hpp  Discv4Pong.hpp  discovery.hpp  packet_factory.hpp
include/rlpx/: rlpx_error.hpp  rlpx_session.hpp  rlpx_types.hpp
include/rlpx/auth/: auth_handshake.hpp  auth_keys.hpp
include/rlpx/crypto/: aes.hpp  ecdh.hpp  hmac.hpp  kdf.hpp
include/rlpx/framing/: frame_cipher.hpp  message_stream.hpp
rlpx/: CMakeLists.txt
rlpx/include/: rlpx_session.hpp
rlpx/include/auth/: auth_handshake.hpp  ecies_cipher.hpp
rlpx/src/: rlpx_error.cpp
rlpx/src/auth/: ecies_cipher.cpp
scripts/: build_integration_tests.bat  coverage_analysis.bat  coverage_analysis.sh  run_network_tests.bat  run_network_tests.sh
src/: CMakeLists.txt  common.cpp  endian.cpp  rlp_decoder.cpp  rlp_encoder.cpp
src/PeerDiscovery/: Discv4Packet.cpp  Discv4Ping.cpp  Discv4Pong.cpp  packet_factory.cpp
src/base/: CMakeLists.txt  logger.cpp  rlp-logger.cpp
src/discv4/: CMakeLists.txt  discv4_client.cpp  discv4_enr_request.cpp  discv4_enr_response.cpp  discv4_error.cpp  discv4_packet.cpp  discv4_ping.cpp  discv4_pong.cpp  packet_factory.cpp
src/discv5/: CMakeLists.txt  discv5_bootnodes.cpp  discv5_client.cpp  discv5_crawler.cpp  discv5_enr.cpp  discv5_error.cpp
src/eth/: CMakeLists.txt  abi_decoder.cpp  chain_tracker.cpp  eth_watch_service.cpp  event_filter.cpp  messages.cpp  objects.cpp
src/rlp/: CMakeLists.txt  boost_exception_stub.cpp  common.cpp  endian.cpp  rlp_decoder.cpp  rlp_encoder.cpp  rlp_streaming.cpp
src/rlp/PeerDiscovery/: Discv4Packet.cpp  Discv4Ping.cpp  Discv4Pong.cpp  packet_factory.cpp
src/rlpx/: CMakeLists.txt  rlpx_error.cpp  rlpx_session.cpp
src/rlpx/auth/: auth_handshake.cpp  ecies_cipher.cpp
src/rlpx/crypto/: aes.cpp  ecdh.cpp  hmac.cpp  kdf.cpp
src/rlpx/framing/: frame_cipher.cpp  message_stream.cpp
src/rlpx/protocol/: messages.cpp
src/rlpx/socket/: socket_transport.cpp
test/: CMakeLists.txt  discovery_test.cpp  rlp_benchmark_tests.cpp  rlp_comprehensive_tests.cpp  rlp_decoder_tests.cpp  rlp_edge_cases.cpp  rlp_encoder_tests.cpp  rlp_endian_test.cpp  rlp_endian_tests.cpp  rlp_ethereum_tests.cpp  rlp_property_tests.cpp  rlp_random_tests.cpp  rlp_test.cpp  round_trip_test.cpp
test/discv4/: CMakeLists.txt  dial_filter_test.cpp  dial_history_test.cpp  dial_scheduler_test.cpp  discovery_test.cpp  discv4_client_test.cpp  discv4_protocol_test.cpp  enr_client_test.cpp  enr_enrichment_test.cpp  enr_request_test.cpp  enr_response_test.cpp
test/discv5/: CMakeLists.txt  discv5_bootnodes_test.cpp  discv5_client_test.cpp  discv5_crawler_test.cpp  discv5_enr_test.cpp
test/eth/: CMakeLists.txt  abi_decoder_test.cpp  chain_tracker_test.cpp  eth_handshake_test.cpp  eth_messages_test.cpp  eth_objects_test.cpp  eth_transactions_test.cpp  eth_watch_cli_test.cpp  eth_watch_integration_test.cpp  eth_watch_service_test.cpp  event_filter_test.cpp  gnus_contracts_test.cpp
test/fuzz/: CMakeLists.txt  fuzz_rlp_decoder.cpp  fuzz_rlp_encoder.cpp
test/integration/: CMakeLists.txt  network_diagnostics.cpp  network_port_test.cpp
test/rlp/: CMakeLists.txt  discovery_test.cpp  rlp_benchmark_tests.cpp  rlp_comprehensive_tests.cpp  rlp_decoder_tests.cpp  rlp_edge_cases.cpp  rlp_encoder_tests.cpp  rlp_endian_tests.cpp  rlp_enhanced_api_tests.cpp  rlp_ethereum_real_world_examples.cpp  rlp_ethereum_tests.cpp  rlp_profiling_tests.cpp  rlp_property_tests.cpp  rlp_random_tests.cpp  rlp_streaming_decoder_tests.cpp  rlp_streaming_simple_api_demo.cpp  rlp_type_safety_tests.cpp  test_helpers.hpp
test/rlpx/: CMakeLists.txt  crypto_test.cpp  frame_cipher_test.cpp  handshake_vectors_test.cpp  message_routing_test.cpp  protocol_messages_test.cpp  rlpx_session_test.cpp  rlpx_state_test.cpp  snappy_test.cpp  socket_lifecycle_test.cpp
(+2 files in other folders)
